--- a/test_for_evaluation_text.ipynb
+++ b/test_for_evaluation_text.ipynb
@@ -40,8 +40,8 @@
    "outputs": [],
    "source": [
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "def generateEvaluation(question_text, answer_text, band_score, max_length = 512):\n",
-    "    input_text = f\"With the question {question_text} and the responsible essay: {answer_text} with evaluated band score {band_score}, please write a detailed evaluation based on four apects: 'Task Achievement', 'Coherence and Cohesion', 'Lexical Resource', 'Grammatical Range And Accuracy'\"\n",
+    "def generateEvaluation(question_text, answer_text, band_score, band_tr, band_cc, band_lr, band_gr, max_length = 512):\n",
+    "    input_text = f\"With the question {question_text} and the responsible essay: {answer_text} with evaluated band score {band_score}, please write a detailed evaluation based on four apects: 'Task Achievement' : {band_tr}, 'Coherence and Cohesion': {band_cc}, 'Lexical Resource': {band_lr}, 'Grammatical Range And Accuracy': {band_gr}\"\n",
     "    input_ids = tokenizer(input_text, return_tensors=\"pt\").input_ids.to(device)\n",
     "    output_ids = model.generate(\n",
     "        input_ids,\n",
@@ -68,6 +68,10 @@
    "outputs": [],
    "source": [
     "band_score = 6.5\n",
+    "band_tr = 6.0\n",
+    "band_cc = 6.5\n",
+    "band_lr = 6.0\n",
+    "band_gr = 6.5\n",
     "question_text = \"Young people are often influenced in their behaviours by others in the same age group. Some argue that peer pressure is important while others feel it has distinct disadvantages. Do the disadvantages of peer pressure outweigh the advantages?\"\n",
     "answer_text = (\n",
     "    \"In this day and age, peer pressure is considered as one of the most important factors affecting young people's behaviour. \"\n",
@@ -83,7 +87,7 @@
     "    \"It is recommended that young people should be encouraged to learn how to handle peer pressure. In addition, young people should focus on their studies in order to avoid being influenced by other young people. \"\n",
     "    \"This will help them to reduce their peer pressure and improve their self-esteem in the long run.\"\n",
     ")\n",
-    "generated_text = generateEvaluation(question_text, answer_text, band_score)"
+    "generated_text = generateEvaluation(question_text, answer_text, band_score, band_tr, band_cc, band_lr, band_gr)"
    ]
   },
   {
@@ -95,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "'**Task Achievement:** - The candidate has effectively addressed the given task by discussing both the advantages and disadvantages of peer pressure. - The ideas presented are clear, relevant, and coherent, demonstrating a good understanding of the topic. - All aspects of the task have been adequately covered and supported with appropriate arguments and evidence. - Overall, the candidate has fulfilled the requirements of the task. - Suggested Band Score: 7.0 **Coherence and Cohesion:** The essay is well-organized and easy to follow. - Transitions between sentences and paragraphs are clear and effective, maintaining a smooth progression of ideas. - Connecting words and phrases are used effectively to maintain coherence. - Information is presented in a logical sequence, making it easy for the reader to follow the argument. - However, there are a few instances where the transitions could be improved to enhance the overall coherence and cohesion of the text. - **Mistakes and Rectifications**: - \"In this day and age, peer pressure is considered as one of the most important factors affecting young people\\'s behaviour\" - \"As a result, they may be distracted from their studies.\" - \"Moreover, young people may be influenced by other people whom they do not know.\" - The use of punctuation and sentence formation is generally accurate, but there are some instances where commas could be used more effectively to enhance the flow of the essay. - \"For instance, young people who are not well-prepared can be affected by other people who do not know them.\" - **Rectifications:** The candidate has used a variety of sentence structures, including complex and compound sentences. - There are some minor grammatical errors, such as the use of \"may not be able to concentrate on their studies\" and the missing comma after \"For instance\" in the second paragraph. - Punctuation is generally correct, but there is room for improvement in the use of commas to enhance the clarity and coherence of the text, as well as the correction of apostrophes and rectifications.'"
+       "'**Task Achievement:** - The candidate has adequately addressed the given task by discussing both the advantages and disadvantages of peer pressure. - The ideas presented are relevant to the task and support the candidate\\'s position. - However, the essay lacks depth and fails to fully explore all aspects of the task. - Suggested Band Score: 6 **Coherence and Cohesion:** The essay lacks coherence and cohesion. - Transitions between sentences and paragraphs are not smooth, making it difficult for the reader to follow the flow of ideas. - Connecting words and phrases are used sparingly, resulting in a disjointed flow of information. - There is a lack of logical sequence and arrangement of information, which affects the overall coherence of the text. - **Lexical Resource (Vocabulary):** The candidate demonstrates a limited range of vocabulary, with some inaccuracies and overuse of certain words. - For example, the candidate uses the word \"influenced\" instead of \"influenced.\" - The vocabulary used is generally appropriate for the context, but there are a few instances where the candidate could have used more precise or varied vocabulary. **Grammatical Range and Accuracy:** The sentence structures are generally simple and lack variety. - Some grammatical errors are present, such as incorrect verb forms (e.g., \"may not be able to concentrate on their studies\"). - The use of punctuation and sentence formation is generally correct. **Overall Band Score:** Considering the holistic performance across all criteria, the overall band score for this essay is **6.5**. The essay adequately addresses the task, but lacks depth, coherence, and accuracy. - With further refinement and refinement, the candidate could achieve a higher band score.'"
       ]
      },
      "execution_count": 6,
